--- a/index.html
+++ b/index.html
@@ -964,7 +964,6 @@
                         <div class="form1DivInput">
                             <select id="selectIntent" name="slctFrm1">
                                 <option value="" disabled selected>— Please select the correct Intent/WOCAS —</option>
-                                <!-- <option value="formReconnect">Reconnection</option> -->
                                 <option value="formFFUP">Follow-Up Repair</option>
                                 <optgroup label="No Dial Tone and No Internet Connection">
                                     <option value="form100_1">All Services Down</option>
@@ -6529,81 +6528,81 @@
             });
         }
 
-        if (showFloating) {
-            showSpecialInstructFloatingDiv("SPECIAL INSTRUCTIONS: Click the text to copy!", specialInstCopiedText);
-        }
+        // if (showFloating) {
+        //     showSpecialInstructFloatingDiv("SPECIAL INSTRUCTIONS: Click the text to copy!", specialInstCopiedText);
+        // }
 
         return specialInstCopiedText;
     }
 
-    function showSpecialInstructFloatingDiv(headerText, specialInstCopiedText) {
-        const floatingDiv = document.getElementById("floatingDiv");
-        const overlay = document.getElementById("overlay");
-        const copiedValues = document.getElementById("copiedValues");
-        let floatingDivHeader = document.getElementById("floatingDivHeader");
+    // function showSpecialInstructFloatingDiv(headerText, specialInstCopiedText) {
+    //     const floatingDiv = document.getElementById("floatingDiv");
+    //     const overlay = document.getElementById("overlay");
+    //     const copiedValues = document.getElementById("copiedValues");
+    //     let floatingDivHeader = document.getElementById("floatingDivHeader");
 
-        if (!floatingDivHeader) {
-            floatingDivHeader = document.createElement("div");
-            floatingDivHeader.id = "floatingDivHeader";
-            floatingDiv.appendChild(floatingDivHeader);
-        }
+    //     if (!floatingDivHeader) {
+    //         floatingDivHeader = document.createElement("div");
+    //         floatingDivHeader.id = "floatingDivHeader";
+    //         floatingDiv.appendChild(floatingDivHeader);
+    //     }
 
-        floatingDivHeader.textContent = headerText;
-        copiedValues.innerHTML = "";
+    //     floatingDivHeader.textContent = headerText;
+    //     copiedValues.innerHTML = "";
 
-        if (specialInstCopiedText && specialInstCopiedText.trim()) {
-            const section = document.createElement("div");
-            section.style.marginTop = "5px";
-            section.style.padding = "10px";
-            section.style.border = "1px solid #ccc";
-            section.style.borderRadius = "4px";
-            section.style.cursor = "pointer";
-            section.style.whiteSpace = "pre-wrap";
-            section.style.transition = "background-color 0.2s, transform 0.1s ease";
+    //     if (specialInstCopiedText && specialInstCopiedText.trim()) {
+    //         const section = document.createElement("div");
+    //         section.style.marginTop = "5px";
+    //         section.style.padding = "10px";
+    //         section.style.border = "1px solid #ccc";
+    //         section.style.borderRadius = "4px";
+    //         section.style.cursor = "pointer";
+    //         section.style.whiteSpace = "pre-wrap";
+    //         section.style.transition = "background-color 0.2s, transform 0.1s ease";
 
-            section.textContent = specialInstCopiedText;
+    //         section.textContent = specialInstCopiedText;
 
-            section.addEventListener("mouseover", () => {
-                section.style.backgroundColor = "#edf2f7";
-            });
-            section.addEventListener("mouseout", () => {
-                section.style.backgroundColor = "";
-            });
+    //         section.addEventListener("mouseover", () => {
+    //             section.style.backgroundColor = "#edf2f7";
+    //         });
+    //         section.addEventListener("mouseout", () => {
+    //             section.style.backgroundColor = "";
+    //         });
 
-            section.onclick = () => {
-                section.style.transform = "scale(0.99)";
-                navigator.clipboard.writeText(specialInstCopiedText).then(() => {
-                    section.style.backgroundColor = "#ddebfb";
-                    setTimeout(() => {
-                        section.style.transform = "scale(1)";
-                        section.style.backgroundColor = "";
-                    }, 150);
-                }).catch(err => {
-                    console.error("Copy failed:", err);
-                });
-            };
+    //         section.onclick = () => {
+    //             section.style.transform = "scale(0.99)";
+    //             navigator.clipboard.writeText(specialInstCopiedText).then(() => {
+    //                 section.style.backgroundColor = "#ddebfb";
+    //                 setTimeout(() => {
+    //                     section.style.transform = "scale(1)";
+    //                     section.style.backgroundColor = "";
+    //                 }, 150);
+    //             }).catch(err => {
+    //                 console.error("Copy failed:", err);
+    //             });
+    //         };
 
-            copiedValues.appendChild(section);
-        }
+    //         copiedValues.appendChild(section);
+    //     }
 
-        overlay.style.display = "block";
-        floatingDiv.style.display = "block";
+    //     overlay.style.display = "block";
+    //     floatingDiv.style.display = "block";
 
-        setTimeout(() => {
-            floatingDiv.classList.add("show");
-        }, 10);
+    //     setTimeout(() => {
+    //         floatingDiv.classList.add("show");
+    //     }, 10);
 
-        const okButton = document.getElementById("okButton");
-        okButton.textContent = "Close";
+    //     const okButton = document.getElementById("okButton");
+    //     okButton.textContent = "Close";
 
-        okButton.onclick = () => {
-            floatingDiv.classList.remove("show");
-            setTimeout(() => {
-                floatingDiv.style.display = "none";
-                overlay.style.display = "none";
-            }, 300);
-        };
-    }
+    //     okButton.onclick = () => {
+    //         floatingDiv.classList.remove("show");
+    //         setTimeout(() => {
+    //             floatingDiv.style.display = "none";
+    //             overlay.style.display = "none";
+    //         }, 300);
+    //     };
+    // }
 
     function validateRequiredFields() {
         const fieldLabels = {
@@ -8093,13 +8092,18 @@
                 if (row) row.style.display = "none";
             });
 
-            allVocOptions = Array.from(vocSelect.options).map(opt => opt.cloneNode(true));
             vocSelect.innerHTML = "";
 
             const placeholder = allVocOptions.find(opt => opt.value === "");
             if (placeholder) {
-                vocSelect.appendChild(placeholder);
+                vocSelect.appendChild(placeholder.cloneNode(true));
             }
+
+            allVocOptions.forEach(option => {
+                if (option.value !== "") {
+                    vocSelect.appendChild(option.cloneNode(true));
+                }
+            });
 
             const header = document.getElementById("headerValue");
             header.innerHTML = '<span class="version-circle">V5</span>Standard Notes Generator';
